# INF221

./: Project.cabal  README.md
app/: Main.hs
app/Game/: Gameloop.hs
app/Game/Model/: Character.hs  CommandParser.hs  Item.hs  MyState.hs  Room.hs
app/Game/View/: Formatting.hs  View.hs
app/Tools/: Grid.hs
app/assets/Rooms/: CharacterInfo  Consumeable  InRoom  Inventory  Menu  Move  WeaponArmor
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
